--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,12 @@ jobs:
     fast_finish: true
     allow_failures:
         -   if: type != cron
+            env: TYPO3=dev-master
+        -   if: type != cron
+            env: TYPO3=10.4.x-dev
+        -   if: type != cron
+            env: TYPO3=9.5.x-dev
+        -   if: type != cron
             env: TYPO3=8.7.x-dev
     include:
         - &tests
@@ -67,10 +73,25 @@ jobs:
                     echo;
                     find . -name \*.php ! -path "./.Build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;;
             php: 7.4
-            env: TYPO3=^8.7
+            env: TYPO3=^10.4
+        -   <<: *tests
+            php: 7.4
+            env: TYPO3=^9.5
+        -   <<: *tests
+            php: 7.3
+            env: TYPO3=^10.4
+        -   <<: *tests
+            php: 7.3
+            env: TYPO3=^9.5
         -   <<: *tests
             php: 7.3
             env: TYPO3=^8.7
+        -   <<: *tests
+            php: 7.2
+            env: TYPO3=^10.4
+        -   <<: *tests
+            php: 7.2
+            env: TYPO3=^9.5
         -   <<: *tests
             php: 7.2
             env: TYPO3=^8.7
@@ -105,7 +126,7 @@ jobs:
             git:
                 depth: false
             php: 7.2
-            env: TYPO3="^8.7"
+            env: TYPO3="^8.7 ^9.5 ^10.4"
             before_script:
                 - mkdir -p .Log/coverage/ .Log/junit/
                 - export TYPO3_PATH_WEB=$PWD/.Build/public
@@ -172,10 +193,25 @@ jobs:
                 - composer config prefer-stable true
                 - composer require --no-progress --no-suggest --no-update typo3/cms-core:"@dev"
             php: 7.4
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=dev-master
+        -   <<: *dev-tests
+            php: 7.4
+            env: TYPO3=9.5.x-dev
+        -   <<: *dev-tests
+            php: 7.3
+            env: TYPO3=dev-master
+        -   <<: *dev-tests
+            php: 7.3
+            env: TYPO3=9.5.x-dev
         -   <<: *dev-tests
             php: 7.3
             env: TYPO3=8.7.x-dev
+        -   <<: *dev-tests
+            php: 7.2
+            env: TYPO3=dev-master
+        -   <<: *dev-tests
+            php: 7.2
+            env: TYPO3=9.5.x-dev
         -   <<: *dev-tests
             php: 7.2
             env: TYPO3=8.7.x-dev
@@ -195,16 +231,46 @@ jobs:
                 - composer require --no-progress --no-suggest --prefer-lowest nimut/typo3-complete:"$TYPO3"
                 - git checkout composer.json
             php: 7.4
-            env: TYPO3=^8.7
+            env: TYPO3=dev-master
         -   <<: *lowest-tests
             php: 7.4
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=10.4.x-dev
+        -   <<: *lowest-tests
+            php: 7.4
+            env: TYPO3=^9.5
+        -   <<: *lowest-tests
+            php: 7.4
+            env: TYPO3=9.5.x-dev
+        -   <<: *lowest-tests
+            php: 7.3
+            env: TYPO3=dev-master
+        -   <<: *lowest-tests
+            php: 7.3
+            env: TYPO3=10.4.x-dev
+        -   <<: *lowest-tests
+            php: 7.3
+            env: TYPO3=^9.5
+        -   <<: *lowest-tests
+            php: 7.3
+            env: TYPO3=9.5.x-dev
         -   <<: *lowest-tests
             php: 7.3
             env: TYPO3=^8.7
         -   <<: *lowest-tests
             php: 7.3
             env: TYPO3=8.7.x-dev
+        -   <<: *lowest-tests
+            php: 7.2
+            env: TYPO3=dev-master
+        -   <<: *lowest-tests
+            php: 7.2
+            env: TYPO3=10.4.x-dev
+        -   <<: *lowest-tests
+            php: 7.2
+            env: TYPO3=^9.5
+        -   <<: *lowest-tests
+            php: 7.2
+            env: TYPO3=9.5.x-dev
         -   <<: *lowest-tests
             php: 7.2
             env: TYPO3=^8.7
