--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^8.7"
+        "typo3/cms-core": "^8.7 || ^9.5 || ^10.4"
     },
     "require-dev": {
         "nimut/testing-framework": "5.x-dev"
