--- a/.travis.yml
+++ b/.travis.yml
@@ -24,13 +24,7 @@ jobs:
     fast_finish: true
     allow_failures:
         -   if: type != cron
-            env: TYPO3=dev-master
-        -   if: type != cron
-            env: TYPO3=10.4.x-dev
-        -   if: type != cron
-            env: TYPO3=9.5.x-dev
-        -   if: type != cron
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=7.6.x-dev
     include:
         - &tests
             stage: 🏃 tests
@@ -72,35 +66,24 @@ jobs:
                     echo;
                     echo;
                     find . -name \*.php ! -path "./.Build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;;
-            php: 7.4
-            env: TYPO3=^10.4
-        -   <<: *tests
-            php: 7.4
-            env: TYPO3=^9.5
-        -   <<: *tests
             php: 7.3
-            env: TYPO3=^10.4
-        -   <<: *tests
-            php: 7.3
-            env: TYPO3=^9.5
-        -   <<: *tests
-            php: 7.3
-            env: TYPO3=^8.7
+            env: TYPO3=^7.6
         -   <<: *tests
             php: 7.2
-            env: TYPO3=^10.4
-        -   <<: *tests
-            php: 7.2
-            env: TYPO3=^9.5
-        -   <<: *tests
-            php: 7.2
-            env: TYPO3=^8.7
+            env: TYPO3=^7.6
         -   <<: *tests
             php: 7.1
-            env: TYPO3=^8.7
+            env: TYPO3=^7.6
         -   <<: *tests
             php: 7.0
-            env: TYPO3=^8.7
+            env: TYPO3=^7.6
+        -   <<: *tests
+            php: 5.6
+            env: TYPO3=^7.6
+        -   <<: *tests
+            php: 5.5
+            env: TYPO3=^7.6
+            dist: trusty
 
         -   stage: 🚢 to ter
             if: tag IS present AND env(TYPO3_ORG_USERNAME) IS present AND env(TYPO3_ORG_PASSWORD) IS present
@@ -126,7 +109,7 @@ jobs:
             git:
                 depth: false
             php: 7.2
-            env: TYPO3="^8.7 ^9.5 ^10.4"
+            env: TYPO3="^7.6"
             before_script:
                 - mkdir -p .Log/coverage/ .Log/junit/
                 - export TYPO3_PATH_WEB=$PWD/.Build/public
@@ -191,36 +174,25 @@ jobs:
                 - if php -i | grep -v TRAVIS_CMD | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
                 - composer config minimum-stability dev
                 - composer config prefer-stable true
-                - composer require --no-progress --no-suggest --no-update typo3/cms-core:"@dev"
-            php: 7.4
-            env: TYPO3=dev-master
-        -   <<: *dev-tests
-            php: 7.4
-            env: TYPO3=9.5.x-dev
-        -   <<: *dev-tests
+                - composer require --ignore-platform-reqs --no-progress --no-suggest --no-update typo3/cms-core:"@dev"
             php: 7.3
-            env: TYPO3=dev-master
-        -   <<: *dev-tests
-            php: 7.3
-            env: TYPO3=9.5.x-dev
-        -   <<: *dev-tests
-            php: 7.3
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=7.6.x-dev
         -   <<: *dev-tests
             php: 7.2
-            env: TYPO3=dev-master
-        -   <<: *dev-tests
-            php: 7.2
-            env: TYPO3=9.5.x-dev
-        -   <<: *dev-tests
-            php: 7.2
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=7.6.x-dev
         -   <<: *dev-tests
             php: 7.1
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=7.6.x-dev
         -   <<: *dev-tests
             php: 7.0
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=7.6.x-dev
+        -   <<: *dev-tests
+            php: 5.6
+            env: TYPO3=7.6.x-dev
+        -   <<: *dev-tests
+            php: 5.5
+            env: TYPO3=7.6.x-dev
+            dist: trusty
 
         - &lowest-tests
             <<: *dev-tests
@@ -230,62 +202,40 @@ jobs:
                 - composer require --no-progress --no-suggest --no-update typo3/cms-composer-installers:"^1.5 || ^2.0"
                 - composer require --no-progress --no-suggest --prefer-lowest nimut/typo3-complete:"$TYPO3"
                 - git checkout composer.json
-            php: 7.4
-            env: TYPO3=dev-master
-        -   <<: *lowest-tests
-            php: 7.4
-            env: TYPO3=10.4.x-dev
-        -   <<: *lowest-tests
-            php: 7.4
-            env: TYPO3=^9.5
-        -   <<: *lowest-tests
-            php: 7.4
-            env: TYPO3=9.5.x-dev
+            php: 7.3
+            env: TYPO3=^7.6
         -   <<: *lowest-tests
             php: 7.3
-            env: TYPO3=dev-master
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=10.4.x-dev
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=^9.5
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=9.5.x-dev
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=^8.7
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=7.6.x-dev
         -   <<: *lowest-tests
             php: 7.2
-            env: TYPO3=dev-master
+            env: TYPO3=^7.6
         -   <<: *lowest-tests
             php: 7.2
-            env: TYPO3=10.4.x-dev
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=^9.5
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=9.5.x-dev
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=^8.7
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=7.6.x-dev
         -   <<: *lowest-tests
             php: 7.1
-            env: TYPO3=^8.7
+            env: TYPO3=^7.6
         -   <<: *lowest-tests
             php: 7.1
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=7.6.x-dev
         -   <<: *lowest-tests
             php: 7.0
-            env: TYPO3=^8.7
+            env: TYPO3=^7.6
         -   <<: *lowest-tests
             php: 7.0
-            env: TYPO3=8.7.x-dev
+            env: TYPO3=7.6.x-dev
+        -   <<: *lowest-tests
+            php: 5.6
+            env: TYPO3=^7.6
+        -   <<: *lowest-tests
+            php: 5.6
+            env: TYPO3=7.6.x-dev
+        -   <<: *lowest-tests
+            php: 5.5
+            env: TYPO3=^7.6
+            dist: trusty
+        -   <<: *lowest-tests
+            php: 5.5
+            env: TYPO3=7.6.x-dev
+            dist: trusty
