--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^8.7 || ^9.5 || ^10.4"
+        "typo3/cms-core": "^7.6"
     },
     "require-dev": {
-        "nimut/testing-framework": "5.x-dev"
+        "nimut/testing-framework": "2.x-dev || 4.x-dev"
     },
     "autoload": {
         "psr-4": {
