--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,9 @@
         "bin-dir": ".Build/bin"
     },
     "extra": {
+        "branch-alias": {
+            "dev-master": "2.x-dev"
+        },
         "typo3/cms": {
             "extension-key": "social_gdpr",
             "cms-package-dir": "{$vendor-dir}/typo3/cms",
