--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,10 @@ jobs:
             stage: 🏃 tests
             before_install:
                 - if php -i | grep -v TRAVIS_CMD | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
+                - composer self-update --1
             install:
-                - composer require --no-progress --no-suggest nimut/typo3-complete:"$TYPO3"
+                - composer require --no-progress --no-suggest --no-update nimut/typo3-complete:"$TYPO3"
+                - composer update
                 - git checkout composer.json
             before_script:
                 - mkdir -p .Build/public/typo3conf/ext/
@@ -130,6 +132,8 @@ jobs:
                 depth: false
             php: 7.2
             env: TYPO3="^8.7 ^9.5 ^10.4"
+            before_install:
+                - composer self-update --1
             before_script:
                 - mkdir -p .Log/coverage/ .Log/junit/
                 - export TYPO3_PATH_WEB=$PWD/.Build/public
@@ -147,7 +151,8 @@ jobs:
                             echo;
                             echo;
                             git clean -Xdf;
-                            composer require --dev --no-progress --no-suggest nimut/typo3-complete:"$TYPO3";
+                            composer require --dev --no-progress --no-suggest --no-update nimut/typo3-complete:"$TYPO3";
+                            composer update;
                             git checkout composer.json;
                             VERSION=${TYPO3//[!0-9]/};
 
@@ -192,6 +197,7 @@ jobs:
             stage: 🏃 dev tests
             before_install:
                 - if php -i | grep -v TRAVIS_CMD | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
+                - composer self-update --1
                 - composer config minimum-stability dev
                 - composer config prefer-stable true
                 - composer require --no-progress --no-suggest --no-update typo3/cms-core:"@dev"
@@ -243,7 +249,8 @@ jobs:
             if: type = cron
             install:
                 - composer require --no-progress --no-suggest --no-update typo3/cms-composer-installers:"^1.5 || ^2.0"
-                - composer require --no-progress --no-suggest --prefer-lowest nimut/typo3-complete:"$TYPO3"
+                - composer require --no-progress --no-suggest --no-update --prefer-lowest nimut/typo3-complete:"$TYPO3"
+                - composer update
                 - git checkout composer.json
             php: 7.4
             env: TYPO3=dev-master
