[FEATURE] Add compatibility to TYPO3 11.5

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
 
 cache:
     directories:
-        - $HOME/.composer/cache
+        - $HOME/.config/composer/cache
         - $HOME/.sonar/cache
 
 jdk:
@@ -24,17 +24,16 @@ jobs:
     fast_finish: true
     allow_failures:
         -   if: type != cron
+            env: TYPO3=11.5.x-dev
+        -   if: type != cron
             env: TYPO3=10.4.x-dev
         -   if: type != cron
             env: TYPO3=9.5.x-dev
-        -   if: type != cron
-            env: TYPO3=8.7.x-dev
     include:
         - &tests
             stage: 🏃 tests
             before_install:
                 - if php -i | grep -v TRAVIS_CMD | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
-                - composer self-update --1
             install:
                 - composer require --no-progress --no-suggest --no-update nimut/typo3-complete:"$TYPO3"
                 - composer update
@@ -73,50 +72,39 @@ jobs:
                     echo;
                     find . -name \*.php ! -path "./.Build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;;
             php: 7.4
+            env: TYPO3=^11.5
+        -   <<: *tests
+            php: 7.4
             env: TYPO3=^10.4
         -   <<: *tests
             php: 7.4
             env: TYPO3=^9.5
         -   <<: *tests
-            php: 7.4
-            env: TYPO3=^8.7
-        -   <<: *tests
             php: 7.3
             env: TYPO3=^10.4
         -   <<: *tests
             php: 7.3
             env: TYPO3=^9.5
         -   <<: *tests
-            php: 7.3
-            env: TYPO3=^8.7
-        -   <<: *tests
             php: 7.2
             env: TYPO3=^10.4
         -   <<: *tests
             php: 7.2
             env: TYPO3=^9.5
-        -   <<: *tests
-            php: 7.2
-            env: TYPO3=^8.7
-        -   <<: *tests
-            php: 7.1
-            env: TYPO3=^8.7
-        -   <<: *tests
-            php: 7.0
-            env: TYPO3=^8.7
 
         -   stage: 🚢 to ter
             if: tag IS present AND env(TYPO3_ORG_USERNAME) IS present AND env(TYPO3_ORG_PASSWORD) IS present
-            php: 7.0
+            php: 7.4
             before_install:
-                - composer self-update --1
+                - sudo sed 's/mozilla.DST_Root_CA_X3.crt/!mozilla\/DST_Root_CA_X3.crt/' -i /etc/ca-certificates.conf
+                - sudo update-ca-certificates
             script:
                 - >
                     echo;
                     echo "Preparing upload of release ${TRAVIS_TAG} to TER";
                     echo;
                     echo;
-                    composer global require helhum/ter-client;
+                    composer global require typo3/tailor;
 
                 - >
                     TAG_MESSAGE=`git tag -n10 -l $TRAVIS_TAG | sed 's/^[0-9.]*[ ]*//g'`;
@@ -124,16 +112,16 @@ jobs:
                     echo "Uploading release ${TRAVIS_TAG} to TER";
                     echo;
                     echo;
-                    $HOME/.composer/vendor/bin/ter-client upload social_gdpr . -u "$TYPO3_ORG_USERNAME" -p "$TYPO3_ORG_PASSWORD" -m "$TAG_MESSAGE";
+                    PATH=$PATH:$(composer global config bin-dir --absolute --quiet);
+                    TYPO3_API_USERNAME="$TYPO3_ORG_USERNAME" TYPO3_API_PASSWORD="$TYPO3_ORG_PASSWORD" tailor ter:publish --comment "$TAG_MESSAGE" ${TRAVIS_TAG} social_gdpr;
 
         -   stage: ✔ with sonarqube scanner
-            if: type = push AND branch IN (master, pre-merge) AND env(SONAR_TOKEN) IS present AND fork = false
+            if: type = push AND branch IN (main, pre-merge) AND env(SONAR_TOKEN) IS present AND fork = false
             git:
                 depth: false
-            php: 7.2
-            env: TYPO3="^8.7 ^9.5 ^10.4"
+            php: 7.4
+            env: TYPO3="^9.5 ^10.4 ^11.5"
             before_install:
-                - composer self-update --1
                 - nvm install 12
                 - nvm use 12
             before_script:
@@ -200,53 +188,45 @@ jobs:
             stage: 🏃 dev tests
             before_install:
                 - if php -i | grep -v TRAVIS_CMD | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
-                - composer self-update --1
                 - composer config minimum-stability dev
                 - composer config prefer-stable true
                 - composer require --no-progress --no-suggest --no-update typo3/cms-core:"@dev"
             php: 7.4
+            env: TYPO3=11.5.x-dev
+        -   <<: *dev-tests
+            php: 7.4
             env: TYPO3=10.4.x-dev
         -   <<: *dev-tests
             php: 7.4
             env: TYPO3=9.5.x-dev
         -   <<: *dev-tests
-            php: 7.4
-            env: TYPO3=8.7.x-dev
-        -   <<: *dev-tests
             php: 7.3
             env: TYPO3=10.4.x-dev
         -   <<: *dev-tests
             php: 7.3
             env: TYPO3=9.5.x-dev
         -   <<: *dev-tests
-            php: 7.3
-            env: TYPO3=8.7.x-dev
-        -   <<: *dev-tests
             php: 7.2
             env: TYPO3=10.4.x-dev
         -   <<: *dev-tests
             php: 7.2
             env: TYPO3=9.5.x-dev
-        -   <<: *dev-tests
-            php: 7.2
-            env: TYPO3=8.7.x-dev
-        -   <<: *dev-tests
-            php: 7.1
-            env: TYPO3=8.7.x-dev
-        -   <<: *dev-tests
-            php: 7.0
-            env: TYPO3=8.7.x-dev
 
         - &lowest-tests
             <<: *dev-tests
             stage: 🏃 prefer-lowest tests
             if: type = cron
             install:
-                - composer require --no-progress --no-suggest --no-update typo3/cms-composer-installers:"^1.5 || ^2.0"
                 - composer require --no-progress --no-suggest --no-update --prefer-lowest nimut/typo3-complete:"$TYPO3"
                 - composer update
                 - git checkout composer.json
             php: 7.4
+            env: TYPO3=^11.5
+        -   <<: *lowest-tests
+            php: 7.4
+            env: TYPO3=11.5.x-dev
+        -   <<: *lowest-tests
+            php: 7.4
             env: TYPO3=^10.4
         -   <<: *lowest-tests
             php: 7.4
@@ -258,12 +238,6 @@ jobs:
             php: 7.4
             env: TYPO3=9.5.x-dev
         -   <<: *lowest-tests
-            php: 7.4
-            env: TYPO3=^8.7
-        -   <<: *lowest-tests
-            php: 7.4
-            env: TYPO3=8.7.x-dev
-        -   <<: *lowest-tests
             php: 7.3
             env: TYPO3=^10.4
         -   <<: *lowest-tests
@@ -275,12 +249,6 @@ jobs:
         -   <<: *lowest-tests
             php: 7.3
             env: TYPO3=9.5.x-dev
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=^8.7
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=8.7.x-dev
         -   <<: *lowest-tests
             php: 7.2
             env: TYPO3=^10.4
@@ -293,21 +261,3 @@ jobs:
         -   <<: *lowest-tests
             php: 7.2
             env: TYPO3=9.5.x-dev
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=^8.7
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=8.7.x-dev
-        -   <<: *lowest-tests
-            php: 7.1
-            env: TYPO3=^8.7
-        -   <<: *lowest-tests
-            php: 7.1
-            env: TYPO3=8.7.x-dev
-        -   <<: *lowest-tests
-            php: 7.0
-            env: TYPO3=^8.7
-        -   <<: *lowest-tests
-            php: 7.0
-            env: TYPO3=8.7.x-dev
