--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
         }
     ],
     "require": {
-        "php": ">= 7.0, < 7.5",
-        "typo3/cms-core": "^8.7 || ^9.5 || ^10.4"
+        "php": "^7.2",
+        "typo3/cms-core": "^9.5 || ^10.4 || ^11.5"
     },
     "require-dev": {
-        "nimut/testing-framework": "5.x-dev"
+        "nimut/testing-framework": "6.x-dev"
     },
     "autoload": {
         "psr-4": {
