--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2 || ^8.0",
         "typo3/cms-core": "^9.5 || ^10.4 || ^11.5"
     },
     "require-dev": {
