--- a/.travis.yml
+++ b/.travis.yml
@@ -27,15 +27,13 @@ jobs:
             env: TYPO3=11.5.x-dev
         -   if: type != cron
             env: TYPO3=10.4.x-dev
-        -   if: type != cron
-            env: TYPO3=9.5.x-dev
     include:
         - &tests
             stage: 🏃 tests
             before_install:
                 - if php -i | grep -v TRAVIS_CMD | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
             install:
-                - composer require --no-progress --no-suggest --no-update nimut/typo3-complete:"$TYPO3"
+                - composer require --no-progress --no-suggest --no-update typo3/cms-core:"$TYPO3"
                 - composer update
                 - git checkout composer.json
             before_script:
@@ -53,7 +51,7 @@ jobs:
                         echo "Running unit tests";
                         echo;
                         echo;
-                        .Build/bin/phpunit --bootstrap .Build/vendor/nimut/testing-framework/res/Configuration/UnitTestsBootstrap.php --testsuite unit;
+                        .Build/bin/phpunit --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/UnitTestsBootstrap.php --testsuite unit;
                     fi
 
                 - >
@@ -62,7 +60,7 @@ jobs:
                         echo "Running functional tests";
                         echo;
                         echo;
-                        find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo "Running functional test suite {}"; .Build/bin/phpunit --bootstrap .Build/vendor/nimut/testing-framework/res/Configuration/FunctionalTestsBootstrap.php {}';
+                        find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo "Running functional test suite {}"; .Build/bin/phpunit --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTestsBootstrap.php {}';
                     fi
 
                 - >
@@ -82,21 +80,6 @@ jobs:
         -   <<: *tests
             php: 7.4
             env: TYPO3=^10.4
-        -   <<: *tests
-            php: 7.4
-            env: TYPO3=^9.5
-        -   <<: *tests
-            php: 7.3
-            env: TYPO3=^10.4
-        -   <<: *tests
-            php: 7.3
-            env: TYPO3=^9.5
-        -   <<: *tests
-            php: 7.2
-            env: TYPO3=^10.4
-        -   <<: *tests
-            php: 7.2
-            env: TYPO3=^9.5
 
         -   stage: 🚢 to ter
             if: tag IS present AND env(TYPO3_ORG_USERNAME) IS present AND env(TYPO3_ORG_PASSWORD) IS present
@@ -126,7 +109,7 @@ jobs:
             git:
                 depth: false
             php: 7.4
-            env: TYPO3="^9.5 ^10.4 ^11.5"
+            env: TYPO3="^10.4 ^11.5"
             before_install:
                 - nvm install 12
                 - nvm use 12
@@ -147,7 +130,7 @@ jobs:
                             echo;
                             echo;
                             git clean -Xdf;
-                            composer require --dev --no-progress --no-suggest --no-update nimut/typo3-complete:"$TYPO3";
+                            composer require --dev --no-progress --no-suggest --no-update typo3/cms-core:"$TYPO3";
                             composer update;
                             git checkout composer.json;
                             VERSION=${TYPO3//[!0-9]/};
@@ -160,7 +143,7 @@ jobs:
                               echo "Running unit tests";
                               echo;
                               echo;
-                              .Build/bin/phpunit --bootstrap .Build/vendor/nimut/testing-framework/res/Configuration/UnitTestsBootstrap.php --log-junit .Log/junit/unit_$VERSION.xml --coverage-php .Log/coverage/unit_$VERSION.cov  --testsuite unit;
+                              .Build/bin/phpunit --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/UnitTestsBootstrap.php --log-junit .Log/junit/unit_$VERSION.xml --coverage-php .Log/coverage/unit_$VERSION.cov  --testsuite unit;
                             fi
 
                             if [ -d "Tests/Functional" ]; then
@@ -168,7 +151,7 @@ jobs:
                               echo "Running functional tests";
                               echo;
                               echo;
-                              .Build/bin/phpunit --bootstrap .Build/vendor/nimut/testing-framework/res/Configuration/FunctionalTestsBootstrap.php --log-junit .Log/junit/functional_$VERSION.xml --coverage-php .Log/coverage/functional_$VERSION.cov --testsuite functional;
+                              .Build/bin/phpunit --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTestsBootstrap.php --log-junit .Log/junit/functional_$VERSION.xml --coverage-php .Log/coverage/functional_$VERSION.cov --testsuite functional;
                             fi
                         done
 
@@ -208,28 +191,13 @@ jobs:
         -   <<: *dev-tests
             php: 7.4
             env: TYPO3=10.4.x-dev
-        -   <<: *dev-tests
-            php: 7.4
-            env: TYPO3=9.5.x-dev
-        -   <<: *dev-tests
-            php: 7.3
-            env: TYPO3=10.4.x-dev
-        -   <<: *dev-tests
-            php: 7.3
-            env: TYPO3=9.5.x-dev
-        -   <<: *dev-tests
-            php: 7.2
-            env: TYPO3=10.4.x-dev
-        -   <<: *dev-tests
-            php: 7.2
-            env: TYPO3=9.5.x-dev
 
         - &lowest-tests
             <<: *dev-tests
             stage: 🏃 prefer-lowest tests
             if: type = cron
             install:
-                - composer require --no-progress --no-suggest --no-update --prefer-lowest nimut/typo3-complete:"$TYPO3"
+                - composer require --no-progress --no-suggest --no-update --prefer-lowest typo3/cms-core:"$TYPO3"
                 - composer update
                 - git checkout composer.json
             php: 8.1.0
@@ -255,33 +223,3 @@ jobs:
         -   <<: *lowest-tests
             php: 7.4
             env: TYPO3=10.4.x-dev
-        -   <<: *lowest-tests
-            php: 7.4
-            env: TYPO3=^9.5
-        -   <<: *lowest-tests
-            php: 7.4
-            env: TYPO3=9.5.x-dev
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=^10.4
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=10.4.x-dev
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=^9.5
-        -   <<: *lowest-tests
-            php: 7.3
-            env: TYPO3=9.5.x-dev
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=^10.4
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=10.4.x-dev
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=^9.5
-        -   <<: *lowest-tests
-            php: 7.2
-            env: TYPO3=9.5.x-dev
