--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
         }
     ],
     "require": {
-        "php": "^7.2 || ^8.0",
-        "typo3/cms-core": "^9.5 || ^10.4 || ^11.5"
+        "php": "^7.4 || ^8.0",
+        "typo3/cms-core": "^10.4 || ^11.5"
     },
     "require-dev": {
-        "nimut/testing-framework": "6.x-dev"
+        "typo3/testing-framework": "^6.16",
+        "phpspec/prophecy": "^1.16"
     },
     "autoload": {
         "psr-4": {
@@ -33,7 +34,11 @@
     },
     "config": {
         "vendor-dir": ".Build/vendor",
-        "bin-dir": ".Build/bin"
+        "bin-dir": ".Build/bin",
+        "allow-plugins": {
+            "typo3/class-alias-loader": true,
+            "typo3/cms-composer-installers": true
+        }
     },
     "extra": {
         "branch-alias": {
