[TASK] Raise compatibility to TYPO3 12.1

--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,11 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "typo3/cms-core": "^10.4 || ^11.5"
+        "typo3/cms-core": "^10.4 || ^11.5 || ~12.0 || ~12.1"
     },
     "require-dev": {
-        "typo3/testing-framework": "^6.16",
+        "typo3/testing-framework": "^6.16 || 7.*@dev",
+        "sbuerk/typo3-cmscomposerinstallers-testingframework-bridge": "^0.1.0",
         "phpspec/prophecy": "^1.16"
     },
     "autoload": {
@@ -37,7 +38,8 @@
         "bin-dir": ".Build/bin",
         "allow-plugins": {
             "typo3/class-alias-loader": true,
-            "typo3/cms-composer-installers": true
+            "typo3/cms-composer-installers": true,
+            "sbuerk/typo3-cmscomposerinstallers-testingframework-bridge": true
         }
     },
     "extra": {
