--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ jobs:
     fast_finish: true
     allow_failures:
         -   if: type != cron
+            env: TYPO3=dev-master
+        -   if: type != cron
             env: TYPO3=11.5.x-dev
         -   if: type != cron
             env: TYPO3=10.4.x-dev
@@ -70,6 +72,12 @@ jobs:
                     echo;
                     find . -name \*.php ! -path "./.Build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;;
             php: 8.1.0
+            env: TYPO3=~12.1.0
+        -   <<: *tests
+            php: 8.1.0
+            env: TYPO3=~12.0.0
+        -   <<: *tests
+            php: 8.1.0
             env: TYPO3=^11.5
         -   <<: *tests
             php: 8.0
@@ -108,8 +116,8 @@ jobs:
             if: type = push AND branch IN (main, pre-merge) AND env(SONAR_TOKEN) IS present AND fork = false
             git:
                 depth: false
-            php: 7.4
-            env: TYPO3="^10.4 ^11.5"
+            php: 8.1
+            env: TYPO3="^11.5 ~12.0.0 ~12.1.0"
             before_install:
                 - nvm install lts/*
             before_script:
@@ -180,6 +188,9 @@ jobs:
                 - composer config prefer-stable true
                 - composer require --no-progress --no-suggest --no-update typo3/cms-core:"@dev"
             php: 8.1.0
+            env: TYPO3=dev-master
+        -   <<: *dev-tests
+            php: 8.1.0
             env: TYPO3=11.5.x-dev
         -   <<: *dev-tests
             php: 8.0
@@ -199,6 +210,12 @@ jobs:
                 - composer require --no-progress --no-suggest --no-update --prefer-lowest typo3/cms-core:"$TYPO3"
                 - composer update
                 - git checkout composer.json
+            php: 8.1.0
+            env: TYPO3=dev-master
+        -   <<: *lowest-tests
+            php: 8.1.0
+            env: TYPO3=^12.0
+        -   <<: *lowest-tests
             php: 8.1.0
             env: TYPO3=^11.5
         -   <<: *lowest-tests
