--- a/.travis.yml
+++ b/.travis.yml
@@ -111,8 +111,7 @@ jobs:
             php: 7.4
             env: TYPO3="^10.4 ^11.5"
             before_install:
-                - nvm install 12
-                - nvm use 12
+                - nvm install lts/*
             before_script:
                 - mkdir -p .Log/coverage/ .Log/junit/
                 - export TYPO3_PATH_WEB=$PWD/.Build/public
