[TASK] adapt for TYPO3 v12

--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "typo3/cms-core": "^10.4 || ^11.5"
+        "typo3/cms-core": "^12.4"
     },
     "require-dev": {
         "typo3/testing-framework": "^6.16",
