--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
     "require-dev": {
         "typo3/testing-framework": "^6.16 || 7.*@dev",
         "sbuerk/typo3-cmscomposerinstallers-testingframework-bridge": "^0.1.0",
-        "phpspec/prophecy": "^1.16"
+        "phpspec/prophecy": "^1.16",
+        "php-parallel-lint/php-parallel-lint": "^1.4",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
