--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,20 +13,16 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ 'ubuntu-latest' ]
-                typo3: [ '^10.4', '^11.5', '~12.0.0', '~12.1.0' ]
+                typo3: [ '^10.4', '^11.5', '^12.4' ]
                 php: [ '7.4', '8.0', '8.1' ]
                 exclude:
                     -   typo3: '^10.4'
                         php: '8.0'
                     -   typo3: '^10.4'
                         php: '8.1'
-                    -   typo3: '~12.0.0'
+                    -   typo3: '^12.4'
                         php: '7.4'
-                    -   typo3: '~12.0.0'
-                        php: '8.0'
-                    -   typo3: '~12.1.0'
-                        php: '7.4'
-                    -   typo3: '~12.1.0'
+                    -   typo3: '^12.4'
                         php: '8.0'
 
         runs-on: ${{ matrix.os }}
