[BUGFIX] Fix CI pipeline

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=social-gdpr
+sonar.organization=ichhabrecht-github
 sonar.projectName=ichhabrecht/social-gdpr
 sonar.projectVersion=3.x
 sonar.sources=.
