[FEATURE] Add EventListener for TYPO3 12.4

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -4,6 +4,16 @@ services:
         autoconfigure: true
         public: false
 
+    IchHabRecht\SocialGdpr\:
+        resource: '../Classes/*'
+
+    IchHabRecht\SocialGdpr\Form\CustomInlineControl\OnlineFalMediaPreviewFlush:
+        tags:
+            -   name: event.listener
+                identifier: 'socialgdprModifyFileReferenceControlsEvent'
+                event: TYPO3\CMS\Backend\Form\Event\ModifyFileReferenceControlsEvent
+                method: renderFileReferenceHeaderControl
+
     IchHabRecht\SocialGdpr\Hooks\ContentPostProcessHook:
         tags:
             -   name: event.listener
