--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "typo3/cms-core": "^10.4 || ^11.5 || ^12.4"
+        "typo3/cms-core": "^13.4"
     },
     "require-dev": {
-        "typo3/testing-framework": "^6.16 || 7.*@dev",
+        "typo3/testing-framework": "^8.2.7",
         "sbuerk/typo3-cmscomposerinstallers-testingframework-bridge": "^0.1.0",
         "phpspec/prophecy": "^1.16",
         "php-parallel-lint/php-parallel-lint": "^1.4",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^11.5.10"
     },
     "conflict": {
         "psr/container": "<1.1",
