--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -15,8 +15,8 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ 'ubuntu-latest' ]
-                typo3: [ '10.4.x-dev', '11.5.x-dev', '12.4.x-dev' ]
-                php: [ '7.4', '8.0', '8.1' ]
+                typo3: [ '13.4.x-dev' ]
+                php: [ '8.2', '8.3', '8.4' ]
                 dependency-version: [ 'lowest', 'stable' ]
                 exclude:
                     -   typo3: '10.4.x-dev'
@@ -96,7 +96,7 @@ jobs:
                     typo3DatabasePassword: 'root'
                     typo3DatabaseUsername: 'root'
                 run: |
-                    sudo /etc/init.d/mysql start                
+                    sudo /etc/init.d/mysql start
                     mkdir -p .Build/public/typo3conf/ext/
                     if [ ! -L .Build/public/typo3conf/ext/social_gdpr ]; then ln -snvf ../../../../. .Build/public/typo3conf/ext/social_gdpr; fi
                     find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo "Running functional test suite {}"; .Build/bin/phpunit --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTestsBootstrap.php {}'
