--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,17 +13,8 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ 'ubuntu-latest' ]
-                typo3: [ '^10.4', '^11.5', '^12.4' ]
-                php: [ '7.4', '8.0', '8.1' ]
-                exclude:
-                    -   typo3: '^10.4'
-                        php: '8.0'
-                    -   typo3: '^10.4'
-                        php: '8.1'
-                    -   typo3: '^12.4'
-                        php: '7.4'
-                    -   typo3: '^12.4'
-                        php: '8.0'
+                typo3: [ '^13.4' ]
+                php: [ '8.2', '8.3', '8.4' ]
 
         runs-on: ${{ matrix.os }}
 
@@ -90,7 +81,7 @@ jobs:
                     typo3DatabasePassword: 'root'
                     typo3DatabaseUsername: 'root'
                 run: |
-                    sudo /etc/init.d/mysql start                
+                    sudo /etc/init.d/mysql start
                     mkdir -p .Build/public/typo3conf/ext/
                     if [ ! -L .Build/public/typo3conf/ext/social_gdpr ]; then ln -snvf ../../../../. .Build/public/typo3conf/ext/social_gdpr; fi
                     find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo "Running functional test suite {}"; HASH=${{ steps.version-cache.outputs.version }}_$( echo {} | md5sum | cut -d " " -f 1); .Build/bin/phpunit --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTestsBootstrap.php --log-junit .Log/junit/functional_$HASH.xml --coverage-php .Log/coverage/functional_$HASH.cov {}'
