--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,23 +6,24 @@ on:
             - "v?[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
+    compute:
+        uses: ./.github/workflows/compute.yml
+
     test:
         uses: ./.github/workflows/test.yml
 
     release:
         name: '🚢 to TER'
 
+        needs: [ compute, test ]
+
         env:
-            php: '8.2'
-            typo3: '^12.4'
-            typo3_org_username: ${{ secrets.TYPO3_ORG_USERNAME }}
-            typo3_org_password: ${{ secrets.TYPO3_ORG_PASSWORD }}
+            php: ${{ fromJson(needs.compute.outputs.php-single) }}
+            typo3: ${{ fromJson(needs.compute.outputs.typo3-single) }}
 
         if: github.repository == 'IchHabRecht/social_gdpr'
 
-        needs: [ test ]
-
-        runs-on: ubuntu-latest
+        runs-on: ${{ fromJson(needs.compute.outputs.os-single) }}
 
         steps:
             -   name: Checkout
@@ -61,7 +62,6 @@ jobs:
                     export PATH=$PATH:$(composer global config bin-dir --absolute --quiet)
 
             -   name: Uploading release ${{ steps.github-ref.outputs.version }} to TER
-                if: ${{ env.typo3_org_username != '' }} && ${{ env.typo3_org_password != '' }}
                 run: |
                     export TAG_MESSAGE=$(git tag -n10 -l ${{ steps.github-ref.outputs.version }} | sed 's/^[v]*[0-9.]*[ ]*//g')
                     echo $TAG_MESSAGE
