--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,28 +2,22 @@ name: 🏃 tests
 
 on: [ push, pull_request, workflow_call ]
 
-concurrency:
-    group: ${{ github.head_ref || github.run_id }}
-
 jobs:
+    compute:
+        uses: ./.github/workflows/compute.yml
+
     test:
         name: 'TYPO3: ${{ matrix.typo3 }} - PHP: ${{ matrix.php }}'
+
+        needs: [ compute ]
 
         strategy:
             fail-fast: false
             matrix:
-                os: [ 'ubuntu-latest' ]
-                typo3: [ '^10.4', '^11.5', '^12.4' ]
-                php: [ '7.4', '8.0', '8.1' ]
-                exclude:
-                    -   typo3: '^10.4'
-                        php: '8.0'
-                    -   typo3: '^10.4'
-                        php: '8.1'
-                    -   typo3: '^12.4'
-                        php: '7.4'
-                    -   typo3: '^12.4'
-                        php: '8.0'
+                os: ${{ fromJson(needs.compute.outputs.os)  }}
+                php: ${{ fromJson(needs.compute.outputs.php)  }}
+                typo3: ${{ fromJson(needs.compute.outputs.typo3)  }}
+                exclude: ${{ fromJson(needs.compute.outputs.exclude)  }}
 
         runs-on: ${{ matrix.os }}
 
@@ -93,11 +87,12 @@ jobs:
                     sudo /etc/init.d/mysql start                
                     mkdir -p .Build/public/typo3conf/ext/
                     if [ ! -L .Build/public/typo3conf/ext/social_gdpr ]; then ln -snvf ../../../../. .Build/public/typo3conf/ext/social_gdpr; fi
-                    find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo "Running functional test suite {}"; HASH=${{ steps.version-cache.outputs.version }}_$( echo {} | md5sum | cut -d " " -f 1); .Build/bin/phpunit --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTestsBootstrap.php --log-junit .Log/junit/functional_$HASH.xml --coverage-php .Log/coverage/functional_$HASH.cov {}'
+                    find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo ""; echo ""; echo "Running functional test suite {}"; HASH=${{ steps.version-cache.outputs.version }}_${{ matrix.php }}_$( echo {} | md5sum | cut -d " " -f 1); .Build/bin/phpunit --bootstrap .Build/vendor/typo3/testing-framework/Resources/Core/Build/FunctionalTestsBootstrap.php --log-junit .Log/junit/functional_$HASH.xml --coverage-php .Log/coverage/functional_$HASH.cov {}'
 
             -   name: Archive PHPUnit logs
                 uses: actions/upload-artifact@v4
                 with:
                     name: phpunit-logs-${{ runner.os }}-${{ matrix.typo3 }}-${{ matrix.php }}
                     path: .Log/*
+                    include-hidden-files: true
                     retention-days: 1
