--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -3,7 +3,7 @@ $header = <<<'EOF'
 /*
  * This file is part of the TYPO3 extension social_gdpr.
  *
- * (c) Nicole Cordes <typo3@cordes.co>
+ * (c) Nicole Hummel <nicole-typo3@nimut.dev>
  *
  * It is free software; you can redistribute it and/or modify it under
  * the terms of the GNU General Public License, either version 2
