--- a/.github/workflows/compute.yml
+++ b/.github/workflows/compute.yml
@@ -7,6 +7,9 @@ env:
         "7.4"
         "8.0"
         "8.1"
+        "8.2"
+        "8.3"
+        "8.4"
     TYPO3: |
         "^10.4"
         "^11.5"
@@ -32,6 +35,38 @@ env:
             "10.4.x-dev-8.1": {
                 "typo3": "10.4.x-dev",
                 "php": "8.1",
+            },
+            "10.4-8.2": {
+                "typo3": "^10.4",
+                "php": "8.2",
+            },
+            "10.4.x-dev-8.2": {
+                "typo3": "10.4.x-dev",
+                "php": "8.2",
+            },
+            "10.4-8.3": {
+                "typo3": "^10.4",
+                "php": "8.3",
+            },
+            "10.4.x-dev-8.3": {
+                "typo3": "10.4.x-dev",
+                "php": "8.3",
+            },
+            "10.4-8.4": {
+                "typo3": "^10.4",
+                "php": "8.4",
+            },
+            "10.4.x-dev-8.4": {
+                "typo3": "10.4.x-dev",
+                "php": "8.4",
+            },
+            "11.5-8.4": {
+                "typo3": "^11.5",
+                "php": "8.4",
+            },
+            "11.5.x-dev-8.4": {
+                "typo3": "11.5.x-dev",
+                "php": "8.4",
             },
             "12.4-7.4": {
                 "typo3": "^12.4",
